# model-os

./: .gitignore  Dockerfile.mdl  Makefile  README.md  constraints.txt  pyproject.toml
docs/: core_types.md  versioning.md
docs/roadmap/: accelerators.md  class_containers.md  protocol.md  secrets.md
examples/basic/: requirements.txt
examples/basic/foo/: foo.py
examples/notebooks/basic/: README.md  foo.obj.py  main.ipynb
examples/txt_classifier/classify/: classifier.py
modelos/: __init__.py  config.py  local.py  log.py  pkg.py  project.py  repo.py  scm.py
modelos/env/: README.md  __init__.py  base.py  id.py  info.py  version.py
modelos/env/image/: build.py  client.py  file.py  id.py  registry.py
modelos/env/repo/: __init__.py  base.py
modelos/object/: __init__.py  base.py  base_new.py  encoding.py  id.py  info.py  kind.py  meta.py  opts.py  pkg.py  schema.py  version.py
modelos/object/repo/: __init__.py  base.py  oci.py  uri.py
modelos/pkg/: __init__.py  base.py  id.py  info.py  util.py  version.py
modelos/pkg/repo/: __init__.py  base.py  local.py  oci.py  remote.py  uri.py  util.py
modelos/repo/: base.py  img.py  pkg.py
modelos/run/: README.md  __init__.py  base.py  client.py  id.py
modelos/util/: decorate.py  deps.py  encoding.py  generic.py  notebook.py  path.py  rootpath.py  source.py  version.py
nb/: extract2.ipynb  foo_client.py  foo_obj.py  foo_server.py  full.ipynb
notebooks/: test.ipynb
notebooks/data/: test.yaml
tests/: scm_test.py
tests/object/: encoding_test.py
tests/pkg/: id_test.py  pkg_test.py
(+36 files in other folders)
